# faunalia_toolkit

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  setup.cfg
.github/workflows/: linter.yml  packager.yml  release.yml  tester.yml
docs/: conf.py
docs/development/: translation.md
docs/usage/: installation.md
faunalia_toolkit/: __init__.py  metadata.txt  plugin_main.py
faunalia_toolkit/gui/: dlg_settings.py  dlg_settings.ui
faunalia_toolkit/processing/: __init__.py  provider.py
faunalia_toolkit/resources/i18n/: plugin_translation.pro
faunalia_toolkit/toolbelt/: log_handler.py  preferences.py  translator.py
requirements/: development.txt  packaging.txt
tests/qgis/: test_plg_preferences.py
tests/unit/: test_plg_metadata.py
